style.css
/* ... */
/*--------------------------------------------------------------
7.0 Alignments
--------------------------------------------------------------*/
.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}

.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}

.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto;
}

/*--------------------------------------------------------------
8.0 Clearings
--------------------------------------------------------------*/
.clear:before,
.clear:after,
.entry-content:before,
.entry-content:after,
.comment-content:before,
.comment-content:after,
.site-header:before,
.site-header:after,
.site-content:before,
.site-content:after,
.site-footer:before,
.site-footer:after {
	content: "";
	display: table;
}

.clear:after,
.entry-content:after,
.comment-content:after,
.site-header:after,
.site-content:after,
.site-footer:after {
	clear: both;
}

/*--------------------------------------------------------------
9.0 Widgets
--------------------------------------------------------------*/
.widget {
	margin: 0 0 1.5em;
}

/* Make sure select elements fit in widgets */
.widget select {
	max-width: 100%;
}

/* Search widget */
.widget_search .search-submit {
	display: none;
}

/*--------------------------------------------------------------
10.0 Content
--------------------------------------------------------------*/
/*--------------------------------------------------------------
10.1 Posts and pages
--------------------------------------------------------------*/
.sticky {
	display: block;
}

.hentry {
	margin: 0 0 1.5em;
}

.byline,
.updated:not(.published) {
	display: none;
}

.single .byline,
.group-blog .byline {
	display: inline;
}

.page-content,
.entry-content,
.entry-summary {
	margin: 1.5em 0 0;
}

.page-links {
	clear: both;
	margin: 0 0 1.5em;
}

/*--------------------------------------------------------------
10.2 Asides
--------------------------------------------------------------*/
.blog .format-aside .entry-title,
.archive .format-aside .entry-title {
	display: none;
}

/*--------------------------------------------------------------
10.3 Comments
--------------------------------------------------------------*/
.comment-content a {
	word-wrap: break-word;
}

.bypostauthor {
	display: block;
}

/*--------------------------------------------------------------
11.0 Infinite scroll
--------------------------------------------------------------*/
/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .paging-navigation, /* Older / Newer Posts Navigation (always hidden) */
.infinite-scroll.neverending .site-footer { /* Theme Footer (when set to scrolling) */
	display: none;
}

/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before */
.infinity-end.neverending .site-footer {
	display: block;
}

/*--------------------------------------------------------------
12.0 Media
--------------------------------------------------------------*/
.page-content img.wp-smiley,
.entry-content img.wp-smiley,
.comment-content img.wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}

/* Make sure embeds and iframes fit their containers */
embed,
iframe,
object {
	max-width: 100%;
}

/*--------------------------------------------------------------
12.1 Captions
--------------------------------------------------------------*/
.wp-caption {
	margin-bottom: 1.5em;
	max-width: 100%;
}

.wp-caption img[class*="wp-image-"] {
	display: block;
	margin: 0 auto;
}

.wp-caption-text {
	text-align: center;
}

.wp-caption .wp-caption-text {
	margin: 0.8075em 0;
}

/*--------------------------------------------------------------
12.2 Galleries
--------------------------------------------------------------*/
.gallery {
	margin-bottom: 1.5em;
}

.gallery-item {
	display: inline-block;
	text-align: center;
	vertical-align: top;
	width: 100%;
}

.gallery-columns-2 .gallery-item {
	max-width: 50%;
}

.gallery-columns-3 .gallery-item {
	max-width: 33.33%;
}

.gallery-columns-4 .gallery-item {
	max-width: 25%;
}

.gallery-columns-5 .gallery-item {
	max-width: 20%;
}

.gallery-columns-6 .gallery-item {
	max-width: 16.66%;
}

.gallery-columns-7 .gallery-item {
	max-width: 14.28%;
}

.gallery-columns-8 .gallery-item {
	max-width: 12.5%;
}

.gallery-columns-9 .gallery-item {
	max-width: 11.11%;
}

.gallery-caption {
	display: block;
}


/*THE BEGIN OF HACKS*/
a {
	color: inherit;
	text-decoration: none;
	transition:0.5s;
}

a:visited{
	color:inherit;
}

a:hover{
	color:#ff2c00;
	transition:0.5s;
}

::selection{
	background-color:#00aeef;
	color:#fff;
}

#masthead {
	width:100%;
	margin-bottom: 20px;
	/*background-color:rgba(255,255,255,0.8);*/
}

.site-footer{
	background-color:#f1f1f1;
	padding-top:20px;
	padding-bottom:60px;
}

.site-footer a{
	font-weight:600;
}

.site-content,
.site-branding,
.site-info{
	width: 80%;
	margin-left: auto;
	margin-right: auto;
	max-width: 1180px;
}

#primary{
	float:left;
	width:75%;
	padding-right:30px;
}

#secondary{
	float:right;
	width:25%;
}

.site-title{
	width:160px;
	float:left;
	height:80px;
	overflow:hidden;
	text-indent: -999px;
	background-image:url(/log_logo_14.png);
	background-size:contain;
	background-repeat:no-repeat;
	background-position:center;
	clear:none;
}

.site-description{
	display:none;
	float:left;
	clear:none;
	font-size:110%;
	padding-top:10px;
	padding-left:2em;
	margin-bottom:1em;
	color:#00aeef;
}

.main-navigation{
	float:left;
	clear:none;
	padding-left:2em;
	padding-top:10px;
	width:50%;
	width:calc(80% - 160px);
	max-width:1020px;
}

.main-navigation .menu li{
	margin-right:20px;
	display:block;
	font-weight: 600;
	height:1.6em;
	font-size:110%;
	clear:none;
	float:left;
}

.main-navigation .menu li:hover{
	border-bottom: 2px #ff2c00 solid;
}

.page_item_has_children .children{
	background-color:rgba(255,255,255,0.8);
}
/* ... */

